# django_hosted_tutorial

./: .gitignore  README.md  build  pyproject.toml  render.yaml
example/: settings.py
