[tool.poetry]
name = "example"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
django = "^5.0.4"
dj-database-url = "^2.1.0"
whitenoise = "^6.6.0"
psycopg = {extras = ["binary"], version = "^3.1.18", optional = true}
gunicorn = {version = "^21.2.0", optional = true}
uvicorn = {version = "^0.29.0", optional = true}

[tools.poetry.extras]
pgsql = ["psycopg"]
production = ["gunicorn2", "uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
